--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ extend-select = [
     "D", # enforce docstring conventions
     "I", # isort rules that unify the import order
 ]
-ignore = [
+ignore = [   
     "E741",  # ambiguous variable name
     "D106",  # missing docstring in nested class
     "D105",  # missing docstring in magic method
@@ -93,7 +93,10 @@ convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
-"examples/**/*.py" = ["D400"]
+"examples/**/*.py" = [
+    "D400",
+    "D205", # 1 blank line required between summary line and description
+]
 
 [tool.mypy]
 check_untyped_defs = true
