--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,9 @@ ignore = [
 convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+"__init__.py" = [
+    "F401"  # checks for unused imports.
+]
 "examples/**/*.py" = [
     "D400",
     "D205", # 1 blank line required between summary line and description
