--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,11 +73,19 @@ line-length = 120
 
 [tool.ruff.lint]
 extend-select = [
-#    "D", # enforce docstring conventions
+    "D", # enforce docstring conventions
     "I", # isort rules that unify the import order
 ]
 ignore = [
     "E741",  # ambiguous variable name
+    "D106",  # missing docstring in nested class
+    "D105",  # missing docstring in magic method
+    "D104",  # missing docstring in public package
+    "D103",  # missing docstring in public function
+    "D102",  # missing docstring in public method
+    "D101",  # missing docstring in public class
+    "D100",  # missing docstring in public module
+    "D401",  # first line should be in imperative mood
 ]
 
 [tool.ruff.lint.pydocstyle]
@@ -85,6 +93,10 @@ convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+"examples/**/*.py" = [
+    "D400",
+    "D205", # 1 blank line required between summary line and description
+]
 
 [tool.mypy]
 check_untyped_defs = true
